Text alignment of main section fixed

--- a/style.css
+++ b/style.css
@@ -35,10 +35,12 @@ header {
     flex-direction: row;
     align-items: center;
     width: 88%;
-    margin: 40px auto;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 60px;
 }
 header img {
-    width: 25vh;
+    width: 14vw;
 }
 /* main styles */
 main {
@@ -54,7 +56,8 @@ main img {
     margin-right: 35px;
 }
 main section {
-    position: relative;
+    margin-top: 5.5vh;
+    margin-bottom: auto;
 }
 main h1 {
     font-family: Poppins;
@@ -70,12 +73,12 @@ main h2 {
     margin-bottom: 10px;
 }
 section button {
-    padding: 13px 50px;
+    padding: 1.8vh 3.3vw;
     border: none;
     border-radius: 20px;
     color: hsl(257, 40%, 49%);
     font-weight: 400;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
     cursor: pointer;
 }
 /* footer styles */
